# peat

./: .clippy.toml  .dockerignore  .gitignore  .mcp.json  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPENDENCY-LICENSES.md  DEVELOPMENT.md  E8_TEAM_SYNC_STATUS.md  Makefile  Makefile.old  README.md  REFACTORING-STATUS.md  ROADMAP.md  SECURITY.md  all-dependencies.csv  create_epic_issues.sh  create_issues.sh  deny.toml  package-lock.json
cap-protocol/: Cargo.toml  Makefile
cap-protocol/benches/: backend_comparison.rs  cap_benchmarks.rs
cap-protocol/examples/: bidirectional_command_flow.rs  cap_sim_node.rs  ditto_baseline.rs  ditto_spike.rs  error_handling.rs  shadow_poc.rs  traditional_baseline.rs
cap-protocol/src/: bootstrap.rs  composition.rs  delta.rs  error.rs  hierarchy.rs  lib.rs  models.rs  network.rs  squad.rs  storage.rs  traits.rs
cap-protocol/tests/: automerge_backend_integration.rs  automerge_iroh_sync_e2e.rs  backend_agnostic_e2e.rs  baseline_ditto_bandwidth_e2e.rs  bidirectional_flow_e2e.rs  command_lifecycle_integration.rs  delta_sync_e2e.rs  discovery_e2e.rs  hierarchy_e2e.rs  iroh_minimal_connection.rs  load_testing_e2e.rs  models_integration.rs  network_partition_e2e.rs  squad_formation_e2e.rs  storage_layer_e2e.rs  sync_backend_integration.rs
cap-schema/: Cargo.toml  ICD.md  README.md  SCHEMAS.md  build.rs
cap-schema/proto/: command.proto  common.proto  composition.proto  hierarchy.proto  role.proto
cap-schema/src/: lib.rs  ontology.rs  validation.rs
cap-schema/tests/: json_roundtrip_test.rs
cap-sim/: .dockerignore  .gitignore  BASELINE-TESTING-REQUIREMENTS.md  CAP-FULL-VS-DIFFERENTIAL-COMPARISON.md  Cargo.toml  Dockerfile  E8-OPTIMIZATION-PLAN.md  E8-OPTIMIZATIONS-IMPLEMENTED.md  E8-THREE-WAY-COMPARISON.md  EXPERIMENT-PORTFOLIO.md  FUTURE-TESTING-REQUIREMENTS.md  MODE4-IMPLEMENTATION-TASK.md  MODE4-INTEGRATION-STATUS.md  PROTOBUF-VALIDATION-RESULTS.md  QUICK-START.md  README.md  TRADITIONAL-BASELINE-DESIGN.md  TRADITIONAL-BASELINE-RESULTS.md  analyze_metrics.py  entrypoint.sh  generate-topologies.py  generate-traditional-topologies.py  run-baseline-comparison.sh  run-e8-performance-suite.sh  test-all-modes-all-bandwidths.sh  test-all-modes.sh  test-bandwidth-constraints.sh  test-bandwidth-traditional.sh  test-mode4-bandwidth.sh  test-squad-formation.sh  three-way-comparison-results.txt
cap-sim/scenarios/: poc-ditto-sync.yaml  validation-extreme-constraints.yaml
cap-sim/src/: main.rs
cap-sim/test-bandwidth-suite-20251109-191316/: BANDWIDTH_SUITE_REPORT.md
cap-sim/test-bandwidth-suite-20251109-191705/: BANDWIDTH_SUITE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-175714/: COMPREHENSIVE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-175922/: COMPREHENSIVE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-175929/: COMPREHENSIVE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-180537/: COMPREHENSIVE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-180729/: COMPREHENSIVE_REPORT.md
cap-sim/test-suite-all-modes-bandwidths-20251109-181621/: COMPREHENSIVE_REPORT.md
cap-transport/: Cargo.toml  README.md
hive-ble-test/: Cargo.toml
hive-discovery/: Cargo.toml  README.md
hive-ffi/: Cargo.toml  build.rs
hive-ffi/src/: lib.rs  (+1 more)
hive-inference/: CLAUDE.md  Cargo.toml
hive-mesh/: Cargo.toml
hive-persistence/: Cargo.toml  README.md
hive-protocol/: Cargo.toml
hive-sim/: .env.example  .gitignore  BASELINE-TESTING-REQUIREMENTS.md  CAP-FULL-VS-DIFFERENTIAL-COMPARISON.md  Cargo.toml  DITTO-VS-AUTOMERGE-COMPARISON.md  Dockerfile  Dockerfile.optimized  E8-OPTIMIZATION-PLAN.md  E8-OPTIMIZATIONS-IMPLEMENTED.md  E8-THREE-WAY-COMPARISON.md  EPIC-132-LAB-COMPARISON-STATUS.md  EXPERIMENT-PORTFOLIO.md  FUTURE-TESTING-REQUIREMENTS.md  LAB-3B-COMPLETION-STATUS.md  LAB-3B-DECISION-SUMMARY.md  LAB-3B-IMPLEMENTATION-SUMMARY.md  LAB-3B-RESULTS-ANALYSIS.md  LAB-3B-TESTING-GUIDE.md  LAB-4-COMPREHENSIVE-LATENCY-PLAN.md  LAB-4-PHASE1-METRICS-COMPLETE.md  LAB-4-PHASE3-QUICK-TEST-SUCCESS.md  LAB-4-PHASE3-TEST-FINDINGS.md  LAB-4-RESULTS.md  LAB-4-STATUS-AND-ACTION-PLAN.md  LAB-4-TESTING-GUIDE.md  LAB-4-VALIDATION-RESULTS.md  MODE4-IMPLEMENTATION-TASK.md  MODE4-INTEGRATION-STATUS.md  Makefile  PROTOBUF-VALIDATION-RESULTS.md  QUICK-START.md  README.md  SCALING-UPPER-BOUNDARY-FINDINGS.md  TRADITIONAL-BASELINE-DESIGN.md  TRADITIONAL-BASELINE-RESULTS.md  TRADITIONAL-BASELINE-SCALING-ANALYSIS.md  all-labs-summary-20251128-090824.md  analyze-producer-only-scaling.py  analyze-three-way-comparison.py  (+51 more)
hive-tak-bridge/: Cargo.toml  docker-compose.yaml
hive-transport/: Cargo.toml  README.md
hive-viewer/: Cargo.toml
peat-ble-test/: Cargo.toml
peat-commander/: Cargo.toml
peat-ffi/: Cargo.toml
peat-persistence/: Cargo.toml  README.md
peat-registry/: Cargo.toml
peat-schema/: Cargo.toml  ICD.md  README.md  SCHEMAS.md  build.rs
peat-sim/: .env.example  BASELINE-TESTING-REQUIREMENTS.md  CAP-FULL-VS-DIFFERENTIAL-COMPARISON.md  Cargo.toml  DITTO-VS-AUTOMERGE-COMPARISON.md  Dockerfile  E8-OPTIMIZATION-PLAN.md  E8-OPTIMIZATIONS-IMPLEMENTED.md  E8-THREE-WAY-COMPARISON.md  EPIC-132-LAB-COMPARISON-STATUS.md  EXPERIMENT-PORTFOLIO.md  FUTURE-TESTING-REQUIREMENTS.md  LAB-3B-COMPLETION-STATUS.md  LAB-3B-DECISION-SUMMARY.md  LAB-3B-IMPLEMENTATION-SUMMARY.md  LAB-3B-RESULTS-ANALYSIS.md  LAB-3B-TESTING-GUIDE.md  LAB-4-COMPREHENSIVE-LATENCY-PLAN.md  LAB-4-PHASE1-METRICS-COMPLETE.md  LAB-4-PHASE3-QUICK-TEST-SUCCESS.md  LAB-4-PHASE3-TEST-FINDINGS.md  LAB-4-PHASE4-IMPLEMENTATION-NOTES.md  LAB-4-RESULTS.md  LAB-4-STATUS-AND-ACTION-PLAN.md  LAB-4-TESTING-GUIDE.md  LAB-4-VALIDATION-RESULTS.md  LAB-4-VS-LAB-3B-COMPARISON.md  MODE4-IMPLEMENTATION-TASK.md  MODE4-INTEGRATION-STATUS.md  Makefile  PROTOBUF-VALIDATION-RESULTS.md  QUICK-START.md  README.md  SCALING-UPPER-BOUNDARY-FINDINGS.md  TRADITIONAL-BASELINE-DESIGN.md  TRADITIONAL-BASELINE-RESULTS.md  TRADITIONAL-BASELINE-SCALING-ANALYSIS.md  all-labs-summary-20251128-090824.md  analyze-lab3b-results.py  analyze-scaling-degradation.py  (+33 more)
(+4576 files in other folders)
