[workspace]
resolver = "2"
members = [
    "hive-schema",
    "hive-protocol",
    "hive-transport",
    "hive-persistence",
    "hive-sim",
    "hive-discovery",
    "hive-mesh",
    "hive-ffi",
    "hive-commander",
    "hive-inference",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kit@revolveteam.com>"]
license = "MIT"
repository = "https://github.com/kitplummer/hive"

[workspace.dependencies]
# CRDT synchronization
dittolive-ditto = "=4.11.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
