[workspace]
resolver = "2"
members = [
    "hive-schema",
    "hive-protocol",
    "hive-transport",
    "hive-persistence",
    "hive-sim",
    "hive-discovery",
    "hive-ffi",
    "hive-commander",
    "hive-inference",
    "hive-tak-bridge",
    "hive-ble-test",
]
exclude = ["examples/m5stack-core2-hive"]

# For local development, uncomment to use local checkouts:
# [patch.crates-io]
# hive-mesh = { path = "../hive-mesh" }
# [patch.crates-io]
# hive-btle = { path = "../hive-btle" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kit@revolveteam.com>"]
license = "Apache-2.0"
repository = "https://github.com/kitplummer/hive"

[workspace.dependencies]
# Mesh networking
hive-mesh = "0.2.1"

# BLE mesh transport (ADR-039)
hive-btle = "0.1.3"

# CRDT synchronization
dittolive-ditto = "=4.11.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
