[workspace]
resolver = "2"
members = [
    "peat-schema",
    "peat-protocol",
    "peat-transport",
    "peat-persistence",
    "peat-sim",
    "peat-discovery",
    "peat-ffi",
    "peat-inference",
    "peat-tak-bridge",
    "peat-ble-test",
]
exclude = ["examples/m5stack-core2-peat"]

# For local development, uncomment to use local checkouts:
# [patch.crates-io]
# peat-mesh = { path = "../peat-mesh" }
# [patch.crates-io]
# peat-btle = { path = "../peat-btle" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kit@revolveteam.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat"

[workspace.dependencies]
# Mesh networking
peat-mesh = "0.3.1"

# BLE mesh transport (ADR-039)
peat-btle = "0.2.0"

# CRDT synchronization
dittolive-ditto = "=4.11.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
