[package]
name = "cap-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# CAP dependencies
cap-schema = { path = "../cap-schema" }

dittolive-ditto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
geohash = "0.13"
tempfile = "3.13"
base64 = "0.22"
prost = "0.13"

# CRDT Backends (E8 Evaluation - ADR-007)
automerge = { version = "0.7.1", optional = true }  # Automerge CRDT library for evaluation

[features]
default = []
automerge-backend = ["automerge"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.13"
