[package]
name = "cap-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cap-protocol = { path = "../cap-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TUI dependencies (will be added later for visualization)
# ratatui = "0.25"
# crossterm = "0.27"

[dev-dependencies]
criterion = { workspace = true }
