[package]
name = "cap-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Kit Plummer <kitplummer@gmail.com>"]
description = "HTTP/REST API transport layer for CAP Protocol external integration"
repository = "https://github.com/kitplummer/cap"

[dependencies]
# CAP dependencies
cap-schema = { path = "../cap-schema" }
cap-protocol = { path = "../cap-protocol" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = "0.13"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { workspace = true }

[features]
default = []
