[package]
name = "hive-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for HIVE protocol (Kotlin/Swift via UniFFI)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "hive_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[[example]]
name = "hive_tak_client"
path = "examples/hive_tak_client.rs"
required-features = ["sync"]

[features]
default = ["sync"]
sync = ["hive-protocol/automerge-backend"]

[dependencies]
# UniFFI for cross-language bindings (proc-macro only mode)
uniffi = { version = "0.28", features = ["cli", "tokio"] }

# JNI for direct Android native method binding (bypasses JNA symbol lookup issues)
jni = "0.21"

# HIVE crates - no ditto-backend for Android cross-compilation
hive-protocol = { path = "../hive-protocol", default-features = false }

# Time handling
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime for UniFFI async support
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# JSON serialization for document data
serde_json = "1.0"

# Hex encoding for node IDs
hex = "0.4"

# Temporary directory for testing
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
