[package]
name = "hive-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for HIVE protocol (Kotlin/Swift via UniFFI)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "hive_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[[example]]
name = "hive_tak_client"
path = "examples/hive_tak_client.rs"
required-features = ["sync"]

[[example]]
name = "iroh_test_peer"
path = "examples/iroh_test_peer.rs"
required-features = ["sync"]

[[example]]
name = "dual_test_peer"
path = "examples/dual_test_peer.rs"
required-features = ["sync", "bluetooth"]

[features]
default = ["sync"]
sync = ["hive-protocol/automerge-backend"]
# Bluetooth LE transport - BLE mesh networking (ADR-039)
# Enables hive-btle integration via TransportManager
bluetooth = ["hive-protocol/bluetooth", "dep:hive-btle"]

[dependencies]
# UniFFI for cross-language bindings (proc-macro only mode)
uniffi = { version = "0.28", features = ["cli", "tokio"] }

# JNI for direct Android native method binding (bypasses JNA symbol lookup issues)
jni = "0.21"

# HIVE crates - no ditto-backend for Android cross-compilation
hive-protocol = { path = "../hive-protocol", default-features = false }

# Time handling
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime for UniFFI async support
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# JSON serialization for document data
serde_json = "1.0"

# Hex encoding for node IDs
hex = "0.4"

# Temporary directory for testing
tempfile = "3"

# BLE transport (optional, enabled by bluetooth feature)
# Platform-specific adapter selected via target cfg in dependencies below
hive-btle = { workspace = true, optional = true }

# Platform-specific BLE adapter features
[target.'cfg(target_os = "linux")'.dependencies]
hive-btle = { workspace = true, features = ["linux"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
hive-btle = { workspace = true, features = ["macos"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
hive-btle = { workspace = true, features = ["windows"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
hive-btle = { workspace = true, features = ["android"], optional = true }

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
