[package]
name = "hive-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HIVE inference pipeline for edge AI and object tracking"

[dependencies]
# HIVE Protocol with AutomergeIroh backend (disable ditto-backend to avoid symbol conflicts)
hive-protocol = { path = "../hive-protocol", default-features = false, features = ["automerge-backend"] }
# HIVE Schema - proto-generated types for capability advertisement and tracks
hive-schema = { path = "../hive-schema" }
# Protobuf support for schema types
prost = "0.13"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
num_cpus = "1"

# Hash verification for model downloads
sha2 = "0.10"

# Video capture (GStreamer) - optional for environments without GStreamer
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

# ONNX Runtime for inference (with TensorRT/CUDA execution providers)
# Disabled by default - enable with --features onnx-inference
#
# For Jetson with TensorRT support, set ORT_LIB_LOCATION to point to GPU-enabled ONNX Runtime:
#   export ORT_LIB_LOCATION=/path/to/onnxruntime-gpu/onnxruntime/capi
#   export LD_LIBRARY_PATH=$ORT_LIB_LOCATION:$LD_LIBRARY_PATH
ort = { version = "2.0.0-rc.10", default-features = false, features = ["ndarray"], optional = true }

# Image processing for inference preprocessing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
ndarray = { version = "0.16", optional = true }

# LLM inference via llama.cpp (for Ministral, Llama, etc.)
# Requires llama.cpp to be built - see https://github.com/utilityai/llama-cpp-rs
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = []
# Enable video capture via GStreamer
video-capture = ["gstreamer", "gstreamer-app", "gstreamer-video"]
# Enable ONNX Runtime detector (requires ONNX Runtime library)
onnx-inference = ["ort", "image", "ndarray"]
# Enable LLM inference via llama.cpp (for Ministral, Llama, Phi, etc.)
llm-inference = ["llama-cpp-2"]
# Enable CUDA for LLM inference (requires CUDA toolkit)
llm-cuda = ["llm-inference", "llama-cpp-2/cuda"]
# Full edge node features
edge-node = ["video-capture", "onnx-inference"]

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3.10"

# Examples with feature requirements
[[example]]
name = "video_test"
required-features = ["video-capture"]

[[example]]
name = "video_detection"
required-features = ["video-capture"]

[[example]]
name = "connected_detection"
required-features = ["video-capture"]

[[example]]
name = "onnx_benchmark"
required-features = ["onnx-inference"]
