[package]
name = "hive-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# CAP dependencies
hive-schema = { path = "../hive-schema" }

dittolive-ditto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
geohash = "0.13"
tempfile = "3.13"
base64 = "0.22"
prost = "0.13"

# Security/Crypto dependencies (ADR-006)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
argon2 = "0.5"  # Password hashing (Phase 3: User Auth)
hmac = "0.12"   # TOTP implementation (Phase 3: User Auth)
# Encryption (Phase 4: Encryption & Audit)
chacha20poly1305 = "0.10"  # AEAD encryption (ChaCha20-Poly1305)
x25519-dalek = { version = "2", features = ["static_secrets"] }  # X25519 key exchange
hkdf = "0.12"              # HKDF key derivation

# CRDT Backends (E8 Evaluation - ADR-007)
automerge = { version = "0.7.1", optional = true }  # Automerge CRDT library for evaluation

# AutomergeIrohBackend dependencies (ADR-011)
iroh = { version = "0.95", optional = true }  # QUIC-based P2P networking
iroh-blobs = { version = "0.97", optional = true }  # Content-addressed blob storage (ADR-025)
rocksdb = { version = "0.22", optional = true }  # Persistent storage
lru = { version = "0.12", optional = true }  # LRU cache for hot documents
toml = { version = "0.8", optional = true }  # Static peer configuration
hex = "0.4"  # Hex encoding for PublicKeys and encryption keys
mdns-sd = { version = "0.11", optional = true }  # mDNS service discovery (ADR-011 Phase 3)
rand = { version = "0.9", optional = true }  # Random number generation for retry jitter

[features]
default = []
automerge-backend = ["automerge", "iroh", "iroh-blobs", "rocksdb", "lru", "toml", "mdns-sd", "rand"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.13"
serial_test = "3.1"  # Force serial execution of Ditto-based E2E tests

[[bench]]
name = "backend_comparison"
harness = false

[[bench]]
name = "cap_benchmarks"
harness = false
