[package]
name = "hive-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
automerge-backend = ["hive-protocol/automerge-backend"]

[dependencies]
hive-mesh = { path = "../hive-mesh" }
hive-protocol = { path = "../hive-protocol" }
hive-schema = { path = "../hive-schema" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"

# TUI dependencies (will be added later for visualization)
# ratatui = "0.25"
# crossterm = "0.27"

[dev-dependencies]
criterion = { workspace = true }
