[package]
name = "hive-tak-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HIVE-TAK Bridge service - connects HIVE mesh to TAK Server"

[[bin]]
name = "hive-tak-bridge"
path = "src/main.rs"

[dependencies]
# Workspace crates
hive-protocol = { path = "../hive-protocol", default-features = false, features = ["automerge-backend"] }
hive-transport = { path = "../hive-transport" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Encoding
hex = "0.4"
