[package]
name = "hive-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Kit Plummer <kitplummer@gmail.com>"]
description = "HTTP/REST API transport layer for CAP Protocol external integration"
repository = "https://github.com/kitplummer/cap"

[dependencies]
# CAP dependencies
hive-schema = { path = "../hive-schema" }
hive-protocol = { path = "../hive-protocol" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = "0.13"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TAK transport
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10"
pin-project-lite = "0.2"
futures = "0.3"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { workspace = true }

[features]
default = []
