[package]
name = "peat-commander"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
noise = "0.9"
serde_json = "1.0"
futures = "0.3"

# Peat Protocol integration
peat-protocol = { path = "../peat-protocol" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
